--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 body::before{
@@ -67,7 +67,7 @@ main div button{
 }
 
 main {
-    margin-top: 40px;
+    margin-top: 30px;
 }
 
 main div h1{
